--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ chromadb==0.4.22
 sentence-transformers==2.6.0
 python-dotenv==1.0.0
 google-generativeai>=0.3.0
-tqdm==4.66.1 
+tqdm==4.66.1
+fastapi
+uvicorn
+python-multipart 
